--- a/app/src/main/res/layout/activity_term_edit_course_list.xml
+++ b/app/src/main/res/layout/activity_term_edit_course_list.xml
@@ -6,22 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.terms.TermEditCourseListActivity">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="25dp"
-        android:clickable="true"
-        android:onClick="goToCourseEditAssessmentList"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:contentDescription="Add Course"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,7 +67,6 @@
 
                 <EditText
                     android:id="@+id/term_start_date_edit"
-                    android:tag="term_start_date_edit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="8"
@@ -86,6 +74,7 @@
                     android:hint="DD/MM/YYYY"
                     android:inputType="date"
                     android:onClick="showDateClickerDialog"
+                    android:tag="term_start_date_edit"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             </LinearLayout>
@@ -104,16 +93,57 @@
 
                 <EditText
                     android:id="@+id/term_end_date_edit"
-                    android:tag="term_end_date_edit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:focusable="false"
                     android:hint="DD/MM/YYYY"
                     android:inputType="date"
                     android:onClick="showDateClickerDialog"
+                    android:tag="term_end_date_edit"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             </LinearLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/termSaveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:onClick="addTermFromScreen"
+            android:text="Save" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:background="@android:color/darker_gray"></LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/darker_gray"
+            android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/course_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/darker_gray"
+                tools:layout_editor_absoluteX="50dp"
+                tools:layout_editor_absoluteY="194dp"
+                tools:listitem="@layout/course_list_item" />
+
+            <Button
+                android:id="@+id/button"
+                style="@style/button_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:contentDescription="Add Course"
+                android:onClick="goToCourseEditAssessmentList"
+                android:text="Add Course"
+                app:layout_constraintTop_toBottomOf="@+id/course_recyclerview" />
+
         </LinearLayout>
     </LinearLayout>
 
