Everything done but deleting and rotating screen

--- a/app/src/main/res/layout/activity_term_edit_course_list.xml
+++ b/app/src/main/res/layout/activity_term_edit_course_list.xml
@@ -134,7 +134,7 @@
                 tools:listitem="@layout/course_list_item" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/addCourse"
                 style="@style/button_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
