--- a/app/src/main/res/layout/activity_assessment_edit.xml
+++ b/app/src/main/res/layout/activity_assessment_edit.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.assessments.AssessmentEditActivity">
 
     <LinearLayout
+        android:id="@+id/assessment_snackbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -64,6 +65,29 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
+                    android:text="Start Date" />
+
+                <EditText
+                    android:id="@+id/assessment_start_date_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusable="false"
+                    android:hint="DD/MM/YYYY"
+                    android:inputType="date"
+                    android:onClick="showDateClickerDialog"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
                     android:text="End Date" />
 
                 <EditText
@@ -74,7 +98,6 @@
                     android:hint="DD/MM/YYYY"
                     android:inputType="date"
                     android:onClick="showDateClickerDialog"
-                    android:tag="term_end_date_edit"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             </LinearLayout>
