--- a/app/src/main/res/layout/activity_course_edit_assessment_list.xml
+++ b/app/src/main/res/layout/activity_course_edit_assessment_list.xml
@@ -12,6 +12,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/course_snackbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -258,7 +259,7 @@
                 tools:listitem="@layout/course_list_item" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/addAssessment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="Add Term"
