--- a/app/src/main/res/layout/activity_course_edit_assessment_list.xml
+++ b/app/src/main/res/layout/activity_course_edit_assessment_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
     tools:context=".ui.courses.CourseEditAssessmentListActivity">
 
     <ScrollView
@@ -13,6 +14,7 @@
 
         <LinearLayout
             android:id="@+id/course_snackbar"
+            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -158,6 +160,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/course_notes_image"
                         android:layout_width="45dp"
                         android:layout_height="match_parent"
                         app:srcCompat="@drawable/ic_baseline_notes_24" />
@@ -252,10 +255,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/assessment_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@android:color/darker_gray"
-                tools:layout_editor_absoluteX="50dp"
-                tools:layout_editor_absoluteY="194dp"
                 tools:listitem="@layout/course_list_item" />
 
             <Button
