--- a/app/src/main/res/layout/activity_term_list.xml
+++ b/app/src/main/res/layout/activity_term_list.xml
@@ -4,9 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/darker_gray"
     tools:context=".ui.terms.TermListActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
+        android:id="@+id/snackbar_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"
@@ -23,14 +29,15 @@
 
         <Button
             android:id="@+id/addAssessment"
+            style="@style/button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="Add Term"
             android:layout_marginTop="10dp"
+            android:contentDescription="Add Term"
             android:onClick="goToTermEditCourseList"
-            style="@style/button_style"
             android:text="Add Term"
             app:layout_constraintTop_toBottomOf="@+id/term_recyclerview" />
     </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
