--- a/app/src/main/res/layout/term_list_item.xml
+++ b/app/src/main/res/layout/term_list_item.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="6dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/term_item_text_view"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/word_title"
-        android:background="@android:color/holo_blue_bright"
-        />
+        android:background="@android:color/holo_blue_bright">
+
+        <TextView
+            android:id="@+id/term_item_text_view"
+            style="@style/word_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Terms" />
+
+        <TextView
+            android:id="@+id/term_course_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/term_item_text_view"
+            android:layout_marginLeft="16dp"
+            android:background="@android:color/holo_blue_bright"
+            android:text="Courses" />
+
+    </RelativeLayout>
 
 </LinearLayout>
