--- a/app/src/main/res/menu/menu_course.xml
+++ b/app/src/main/res/menu/menu_course.xml
@@ -7,6 +7,11 @@
         android:title="Share Notes"
         app:showAsAction="never" />
     <item
+        android:id="@+id/showNotes"
+        android:orderInCategory="100"
+        android:title="Show Course Notes"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/notificationStart"
         android:orderInCategory="100"
         android:title="Set start notification"
